@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2011, 2022, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2011, 2024, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -25,7 +25,6 @@
 package jdk.graal.compiler.graph;
 
 import static jdk.graal.compiler.graph.Graph.isNodeModificationCountsEnabled;
-import static jdk.graal.compiler.serviceprovider.GraalUnsafeAccess.getUnsafe;
 
 import java.lang.annotation.ElementType;
 import java.lang.annotation.RetentionPolicy;
@@ -41,6 +40,7 @@ import java.util.Objects;
 import java.util.function.Predicate;
 import java.util.function.Supplier;
 
+import jdk.graal.compiler.serviceprovider.GraalServices;
 import org.graalvm.collections.EconomicSet;
 
 import jdk.graal.compiler.core.common.Fields;
@@ -60,9 +60,9 @@ import jdk.graal.compiler.nodeinfo.NodeCycles;
 import jdk.graal.compiler.nodeinfo.NodeInfo;
 import jdk.graal.compiler.nodeinfo.NodeSize;
 import jdk.graal.compiler.nodeinfo.Verbosity;
+import jdk.graal.compiler.nodes.spi.Simplifiable;
 import jdk.graal.compiler.options.OptionValues;
-import jdk.vm.ci.services.Services;
-import sun.misc.Unsafe;
+import jdk.internal.misc.Unsafe;
 
 /**
  * This class is the base class for all nodes. It represents a node that can be inserted in a
@@ -93,11 +93,11 @@ import sun.misc.Unsafe;
 @NodeInfo
 public abstract class Node implements Cloneable, Formattable {
 
-    private static final Unsafe UNSAFE = getUnsafe();
+    private static final Unsafe UNSAFE = Unsafe.getUnsafe();
 
     public static final NodeClass<?> TYPE = null;
 
-    public static final boolean TRACK_CREATION_POSITION = Boolean.parseBoolean(Services.getSavedProperty("debug.graal.TrackNodeCreationPosition"));
+    public static final boolean TRACK_CREATION_POSITION = Boolean.parseBoolean(GraalServices.getSavedProperty("debug.graal.TrackNodeCreationPosition"));
 
     static final int DELETED_ID_START = -1000000000;
     static final int INITIAL_ID = -1;
@@ -238,8 +238,75 @@ public abstract class Node implements Cloneable, Formattable {
     /**
      * Marker interface for nodes that contain other nodes. When the inputs to {@code this} change,
      * users of {@code this} should also be placed on the work list for canonicalization.
+     *
+     * To illustrate this consider the following IR shape:
+     *
+     * <pre>
+     *                       Node n1
+     *                          |
+     *          IndirectInputCanonicalization
+     *          /               |            \
+     *       usage1          usage2          usage3
+     * </pre>
+     *
+     * Now consider the following situation: this pattern is fully optimized, nothing can change.
+     * However, when the input node {@code n1} of {@code IndirectInputCanonicalization} changes to a
+     * new node {@code n2} suddenly the usage of {@code IndirectInputCanonicalization} can optimize
+     * itself: for example it can drop an input edge (any optimization is possible). Normally these
+     * patterns would be found by a full canonicalizer run, by implementing this interface
+     * incremental canonicalization will also consider the usages.
+     *
+     * <pre>
+     *                       NewNode n2
+     *                          |
+     *          IndirectInputCanonicalization
+     *          /               |            \
+     *       usage1          usage2          usage3
+     * </pre>
+     *
+     * The pattern could optimize for example to
+     *
+     * <pre>
+     *                       NewNode n2---------------
+     *                          |                     |
+     *          IndirectInputCanonicalization         |
+     *          /               |                     |
+     *       usage1          usage2          usage3----
+     * </pre>
+     *
+     * where {@code usage3} completely skips {@code IndirectInputCanonicalization} now.
+     *
+     * Note that this is called {@code IndirectInputChangedCanonicalization} because {@code n1} is
+     * considered an indirect (transitive) input of {@code usage3}.
      */
-    public interface IndirectCanonicalization {
+    public interface IndirectInputChangedCanonicalization {
+    }
+
+    /**
+     * Marker interface for nodes where one input change can cause another input to optimize.
+     *
+     * Consider the following IR shape:
+     *
+     * <pre>
+     *            Node n1         Node n2
+     *               |               |
+     *          IndirectInputCanonicalization
+     * </pre>
+     *
+     * If now input {@code n1} is replaced by another node
+     *
+     * <pre>
+     *            NewNode n3      Node n2
+     *               |               |
+     *          IndirectInputCanonicalization
+     * </pre>
+     *
+     * this can cause n2 to optimize. This is especially relevant for local {@link Simplifiable}
+     * simplifications based on single input/usage patterns. Thus, in order to incrementally trigger
+     * the canonicalization of {@code n2} it is explicitly added to the worklist of the usage
+     * implements {@code InputsChangedCanonicalization}.
+     */
+    public interface InputsChangedCanonicalization {
     }
 
     /**
@@ -1129,10 +1196,7 @@ public abstract class Node implements Cloneable, Formattable {
     private void maybeNotifyInputChanged(Node node) {
         if (graph != null) {
             assert !graph.isFrozen();
-            NodeEventListener listener = graph.nodeEventListener;
-            if (listener != null) {
-                listener.event(Graph.NodeEvent.INPUT_CHANGED, node);
-            }
+            graph.fireNodeEvent(Graph.NodeEvent.INPUT_CHANGED, node);
             graph.edgeModificationCount++;
         }
     }
@@ -1145,10 +1209,7 @@ public abstract class Node implements Cloneable, Formattable {
     public void maybeNotifyZeroUsages(Node node) {
         if (graph != null && node.isAlive()) {
             assert !graph.isFrozen();
-            NodeEventListener listener = graph.nodeEventListener;
-            if (listener != null) {
-                listener.event(Graph.NodeEvent.ZERO_USAGES, node);
-            }
+            graph.fireNodeEvent(Graph.NodeEvent.ZERO_USAGES, node);
         }
     }
 
@@ -1545,7 +1606,7 @@ public abstract class Node implements Cloneable, Formattable {
         return id;
     }
 
-    /**
+    /*
      * Do not overwrite the equality test of a node in subclasses. Equality tests must rely solely
      * on identity.
      */
